trying to solve a bug when using on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,9 @@ body::-webkit-scrollbar-thumb {
     width: 0; /* Remove scrollbar space */
     background: transparent; /* Optional: just make scrollbar invisible */
   }
+  
+  @supports (-webkit-touch-callout: none) { 
+    body {
+      /* The hack for Safari */ height: -webkit-fill-available; 
+    }
 }
